# AnteaterLang

./: CMakeLists.txt  Development Documentation.md  LICENSE  README.md  builtinClasses.c  chunk.h  common.h  compiler.c  constList.c  debug.c  errors.c  errors.h  install_anteater_ide.sh  install_anteaterlang.sh  main.c  objClass.c  object.c  object.h  objectManager.c  refManager.c  runtimeDS.c  runtimeMemoryManager.c  runtimeMemoryManager.h  stringHash.c  testSource  tokenizer.c  tokenizer.h  uninstall_anteater_ide.sh  uninstall_anteaterlang.sh  vm.c  vm.h
ide_src/: c_function_compilation.py  common.py  ideconfig.pickle  main.py
sample_codes/: testSource
sample_source/: userFunctions.c
src/: Makefile  anteatercompilec.sh  common.h  compiler.h  constList.c  debug.c  errors.h  main.c  objClass.h  object.c  object.h  objectManager.c  refManager.c  runtimeDS.c  runtimeMemoryManager.c  stringHash.c  tokenizer.c  vm.c  vm.h
